test/data/resolver/valid/remove_property.cypher
MATCH (n:Person) REMOVE n.age RETURN n
