test/data/resolver/invalid/remove_property_on_projection_alias.cypher
MATCH (n:Person) WITH count(n) AS c REMOVE c.p
